--- a/themes/stepmania/src/_forum.scss
+++ b/themes/stepmania/src/_forum.scss
@@ -110,6 +110,9 @@
 }
 .forum-header {
 	margin-bottom: $spacing;
+	&.forum-header-toplevel {
+		margin-bottom: 0;
+	}
 }
 .topic-footer {
 	margin-top: $spacing;
